--- a/CDEK/Base.lproj/Main.storyboard
+++ b/CDEK/Base.lproj/Main.storyboard
@@ -117,14 +117,14 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qVh-2Z-PSm">
                                 <rect key="frame" x="20" y="568.5" width="374" height="49"/>
-                                <color key="backgroundColor" red="0.49933904410000002" green="0.62898474930000003" blue="0.01997145824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.23800462480000001" green="0.494959712" blue="0.0022532893339999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="iFk-nj-iWE"/>
                                     <constraint firstAttribute="height" constant="49" id="pNr-dZ-kai"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="РАСЧИТАТЬ">
+                                <buttonConfiguration key="configuration" style="plain" title="ПЕРЕСЧИТАТЬ">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="28"/>
                                 </buttonConfiguration>
                                 <userDefinedRuntimeAttributes>
