--- a/CDEK/Base.lproj/Main.storyboard
+++ b/CDEK/Base.lproj/Main.storyboard
@@ -43,11 +43,17 @@
                                 <rect key="frame" x="20" y="625" width="376" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.37899738550000001" green="0.57783019540000002" blue="0.0031613239549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="hightValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="XHD-Rf-cDw"/>
+                                </connections>
                             </slider>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="gLK-kO-mBh">
                                 <rect key="frame" x="22" y="709" width="376" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.37899738550000001" green="0.57783019540000002" blue="0.0031613239549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="weightValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="6QH-Sa-gmB"/>
+                                </connections>
                             </slider>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="262" translatesAutoresizingMaskIntoConstraints="NO" id="NhZ-xn-ZM3">
                                 <rect key="frame" x="22" y="586" width="374.5" height="20.5"/>
@@ -102,7 +108,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="hightLabel" destination="QCr-5n-Flh" id="ICT-dB-3WJ"/>
                         <outlet property="hightSlider" destination="OFL-Qv-3DW" id="bN2-eJ-vyH"/>
+                        <outlet property="weightLabel" destination="1lR-CC-gfq" id="w2F-E4-adu"/>
                         <outlet property="weightSlider" destination="gLK-kO-mBh" id="Miz-FF-COl"/>
                     </connections>
                 </viewController>
